Fix form on empty submission

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                                 <p class="form-message"></p>
                                 <div class="col-md-12">
                                     <div class="single-form form-group text-center">
-                                        <button type="submit" class="main-btn">send message</button>
+                                        <button type="submit" class="btn btn-primary main-btn">send message</button>
                                     </div> <!-- single form -->
                                 </div>
                             </div> <!-- row -->
