--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <!--====== Magnific Popup css ======-->
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
 
+    <!--====== Owl Carousel css ======-->
+    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+
+    <!--====== Owl Carousel Theme Default css ======-->
+    <link rel="stylesheet" href="assets/css/owl.theme.default.css">
+
     <!--====== Default css ======-->
     <link rel="stylesheet" href="assets/css/default.css">
 
@@ -65,6 +71,9 @@
                                         <a class="page-scroll" href="#services">SERVICES</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a class="page-scroll" href="#portfolio">WORKS</a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="page-scroll" href="#contact">CONTACT</a>
                                     </li>
                                 </ul>
@@ -94,7 +103,7 @@
                             <p class="text">Web apps, mobile apps to hardware, we do it all</p>
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" rel="nofollow" href="#contact">GET IN TOUCH</a></li>
-                                <li><a class="main-btn btn-two video-popup" href="#contact">SEE OUR WORK <i class="lni-play"></i></a></li>
+                                <li><a class="main-btn btn-two" href="#contact">SEE OUR WORK</a></li>
                             </ul>
                         </div> <!-- header content -->
                     </div>
@@ -314,7 +323,7 @@
                     <div class="single-pricing mt-40">
                         <div class="pricing-header text-center">
                             <h5 class="sub-title">IoT development</h5>
-                            <img style="height:159.68px;margin:10px;" src="assets/images/prism.png"/>
+                            <img style="height:159.68px;margin:10px;" src="assets/images/techs/prism.png"/>
                         </div>
                         <div class="pricing-list">
                             <ul>
@@ -363,7 +372,37 @@
     </section>
 
     <!--====== CALL TO ACTION PART ENDS ======-->
-    
+
+    <!--====== PORTFOLIO PART START ======-->
+
+    <section id="portfolio" class="portfolio-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="section-title text-center pb-10">
+                        <h4 class="title">Our Works</h4>
+                        <p class="text">Some of the things we have built</p>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+            <div class="row justify-content-center">
+                <div class="owl-carousel">
+                    <div>
+                        <img src="assets/images/portfolio/prism.png"/>
+                    </div>
+                    <div>
+                        <img src="assets/images/portfolio/today.png"/>
+                    </div>
+                    <div>
+                        <img src="assets/images/portfolio/learnshare.png"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--====== PORTFOLIO PART ENDS ======-->
+
     <!--====== CONTACT PART START ======-->
 
     <section id="contact" class="contact-area">
@@ -430,72 +469,26 @@
     <!--====== FOOTER PART START ======-->
 
     <footer id="footer" class="footer-area">
-        <div class="footer-widget">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="footer-logo-support d-md-flex align-items-end justify-content-between">
-                            <div class="footer-logo d-flex align-items-end">
-                                <a class="mt-30" href="index.html"><img src="assets/images/logo.svg" alt="Logo"></a>
-
-                                <ul class="social mt-30">
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-original"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
-                                </ul>
-                            </div> <!-- footer logo -->
-                            
-                        </div> <!-- footer logo support -->
-                    </div>
-                </div> <!-- row -->
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6">
-                        <div class="footer-link">
-                            <h6 class="footer-title">Company</h6>
-                            <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Career</a></li>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="footer-logo-support d-md-flex align-items-end justify-content-between">
+                        <div class="footer-logo d-flex align-items-end">
+                            <a class="mt-30" href="index.html"><img src="assets/images/logo.svg" alt="Logo"></a>
+                            <ul class="social mt-30">
+                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                <li><a href="#"><i class="lni-twitter-original"></i></a></li>
+                                <li><a href="#"><i class="lni-instagram-original"></i></a></li>
+                                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
-                        </div> <!-- footer link -->
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="footer-link">
-                            <h6 class="footer-title">Product & Services</h6>
-                            <ul>
-                                <li><a href="#">Products</a></li>
-                                <li><a href="#">Business</a></li>
-                                <li><a href="#">Developer</a></li>
-                            </ul>
-                        </div> <!-- footer link -->
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-sm-5">
-                        <div class="footer-link">
-                            <h6 class="footer-title">Help & Suuport</h6>
-                            <ul>
-                                <li><a href="#">Support Center</a></li>
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Terms & Conditions</a></li>
-                            </ul>
-                        </div> <!-- footer link -->
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-7">
-                        <div class="footer-newsletter">
-                            <h6 class="footer-title">Subscribe Newsletter</h6>
-                            <div class="newsletter">
-                                <form action="#">
-                                    <input type="text" placeholder="Your Email">
-                                    <button type="submit"><i class="lni-angle-double-right"></i></button>
-                                </form>
-                            </div>
-                            <p class="text">Subscribe weekly newsletter to stay upto date. We don’t send spam.</p>
-                        </div> <!-- footer newsletter -->
-                    </div>
-                </div> <!-- row -->
-            </div> <!-- container -->
-        </div> <!-- footer widget -->
+                        </div> <!-- footer logo -->
+                    </div> <!-- footer logo support -->
+                </div>
+                <div class="col-lg-6" style="margin-top:auto;margin-bottom:10px;">
+                    <div class="footer-title">Buildigy Technologies Pvt Ltd</div>
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
     </footer>
 
     <!--====== FOOTER PART ENDS ======-->
@@ -505,9 +498,6 @@
     <a class="back-to-top" href="#"><i class="lni-chevron-up"></i></a>
 
     <!--====== BACK TO TOP PART ENDS ======-->
-
-
-
 
 
 
@@ -534,6 +524,9 @@
 
     <!--====== Magnific Popup js ======-->
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
+
+    <!--====== Owl Carousel js ======-->
+    <script src="assets/js/owl.carousel.min.js"></script>
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
