Add portfolio section

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
 
     <!--====== Owl Carousel css ======-->
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
+    <!-- <link rel="stylesheet" href="assets/css/owl.carousel.css"> -->
 
     <!--====== Owl Carousel Theme Default css ======-->
-    <link rel="stylesheet" href="assets/css/owl.theme.default.css">
+    <!-- <link rel="stylesheet" href="assets/css/owl.theme.default.css"> -->
 
     <!--====== Default css ======-->
     <link rel="stylesheet" href="assets/css/default.css">
@@ -346,8 +346,57 @@
     </section>
 
     <!--====== SERVICES PART ENDS ======-->
-    
-     <!--====== CALL TO ACTION PART START ======-->
+
+    <!--====== PORTFOLIO PART START ======-->
+
+    <section id="portfolio" class="portfolio-area">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="section-title text-center pb-10">
+                        <h4 class="title">Our Works</h4>
+                        <p class="text">Some of the things we have built</p>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+            <div class="row justify-content-center">
+                <div class="col-md-5 col-sm-12 shadow p-0" style="margin:10px;">
+                    <img class="card-img-top" style="width:inherit;height:auto;" src="assets/images/portfolio/prism.png"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Prism</h5>
+                        <p class="card-text mb-5">Next gen platform for IoT and embedded developers</p>
+                        <a href="https://prismos.dev" class="btn btn-primary" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="col-md-5 col-sm-12 card p-0" style="margin:10px;">
+                    <img class="card-img-top" style="width:inherit;height:auto;" src="assets/images/portfolio/today.png"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Today In Life</h5>
+                        <p class="card-text mb-5">Plan your life, not tasks</p>
+                        <a href="https://play.google.com/store/apps/details?id=com.sidevesh.todayinlife&hl=en" class="btn btn-primary" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="col-md-5 col-sm-12 card p-0" style="margin:10px;">
+                    <img class="card-img-top" style="width:inherit;height:auto;" src="assets/images/portfolio/learnshare.png"/>
+                    <div class="card-body">
+                        <h5 class="card-title">LearnShare</h5>
+                        <p class="card-text mb-5">The RIGHT way of learning</p>
+                        <a href="https://learnshare.herokuapp.com" class="btn btn-primary" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <!-- card              <div class="owl-carousel">
+                        <div><img style="height:50vh;width:auto;" src="assets/images/portfolio/prism.png"/></div>
+                        <div><img style="height:50vh;width:auto;" src="assets/images/portfolio/today.png"/></div>
+                        <div><img style="height:50vh;width:auto;" src="assets/images/portfolio/learnshare.png"/></div>
+                    </div>
+                -->
+            </div>
+        </div>
+    </section>
+
+    <!--====== PORTFOLIO PART ENDS ======-->
+
+    <!--====== CALL TO ACTION PART START ======-->
 
     <section id="call-to-action" class="call-to-action">
         <div class="call-action-image">
@@ -370,38 +419,8 @@
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
-
+    
     <!--====== CALL TO ACTION PART ENDS ======-->
-
-    <!--====== PORTFOLIO PART START ======-->
-
-    <section id="portfolio" class="portfolio-area">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="section-title text-center pb-10">
-                        <h4 class="title">Our Works</h4>
-                        <p class="text">Some of the things we have built</p>
-                    </div> <!-- section title -->
-                </div>
-            </div> <!-- row -->
-            <div class="row justify-content-center">
-                <div class="owl-carousel">
-                    <div>
-                        <img src="assets/images/portfolio/prism.png"/>
-                    </div>
-                    <div>
-                        <img src="assets/images/portfolio/today.png"/>
-                    </div>
-                    <div>
-                        <img src="assets/images/portfolio/learnshare.png"/>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!--====== PORTFOLIO PART ENDS ======-->
 
     <!--====== CONTACT PART START ======-->
 
@@ -526,7 +545,7 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
 
     <!--====== Owl Carousel js ======-->
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <!-- <script src="assets/js/owl.carousel.min.js"></script> -->
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
