--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <p class="text">Web apps, mobile apps to hardware, we do it all</p>
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" rel="nofollow" href="#contact">GET IN TOUCH</a></li>
-                                <li><a class="main-btn btn-two" href="#contact">SEE OUR WORK</a></li>
+                                <li><a class="main-btn btn-two" href="#portfolio">SEE OUR WORK</a></li>
                             </ul>
                         </div> <!-- header content -->
                     </div>
