--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+
+	<meta name="Description" content="application development, website development, engineering, product, service agency, bengaluru, flutter, react, react native, ruby on rails, nodejs, iot, arduino development">
+	<meta name="Keywords" content="application development, website development, engineering, product, service agency, bengaluru, flutter, react, react native, ruby on rails, nodejs, iot, arduino development">
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@buildigy">
+	<meta name="twitter:title" content="Buildigy">
+	<meta name="twitter:description" content="Buildigy, Let's make something">
+	<meta name="twitter:creator" content="@buildigy">
+	<!-- <meta name="twitter:image" content="http://sidevesh.com/public/images/screenshot.png"> -->
+
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Buildigy" />
+	<meta property="og:url" content="https://buildigy.netlify.com/" />
+    <!-- <meta property="og:image" content="http://sidevesh.com/public/images/screenshot.png" /> -->
+	<meta property="og:site_name" content="Buildigy" />
+	<meta property="og:description" content="Buildigy, Let's make something" /> 
+
+	<link rel="home" href="https://buildigy.netlify.com/" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
