--- a/index.html
+++ b/index.html
@@ -101,10 +101,9 @@
                             <div class="navbar-social d-none d-sm-flex align-items-center">
                                 <span>FOLLOW US</span>
                                 <ul>
-                                    <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram-original"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin-original"></i></a></li>                                  
+                                    <li><a href="https://twitter.com/buildigy" target="_blank"><i class="lni-twitter-original"></i></a></li>
+                                    <li><a href="http://instagram.com/buildigy" target="_blank"><i class="lni-instagram-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/buildigy" target="_blank"><i class="lni-linkedin-original"></i></a></li>                                  
                                 </ul>
                             </div>
                         </nav> <!-- navbar -->
@@ -514,10 +513,9 @@
                         <div class="footer-logo d-flex align-items-end">
                             <a class="mt-30" href="index.html"><img src="assets/images/logo.svg" alt="Logo"></a>
                             <ul class="social mt-30">
-                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="#"><i class="lni-instagram-original"></i></a></li>
-                                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                <li><a href="https://twitter.com/buildigy" target="_blank"><i class="lni-twitter-original"></i></a></li>
+                                <li><a href="http://instagram.com/buildigy" target="_blank"><i class="lni-instagram-original"></i></a></li>
+                                <li><a href="https://www.linkedin.com/company/buildigy" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer logo -->
                     </div> <!-- footer logo support -->
