Add Android key points

--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
                             </div>
                             <div class="pricing-list">
                                 <ul>
+                                    <li><i class="lni-check-mark-circle"></i> Performance</li>
+                                    <li><i class="lni-check-mark-circle"></i> 100% native apps</li>
+                                    <li><i class="lni-check-mark-circle"></i> Advanced features</li>
                                     <li><i class="lni-check-mark-circle"></i> Rapid iterations</li>
-                                    <li><i class="lni-check-mark-circle"></i> Multiple connectivity options</li>
-                                    <li><i class="lni-check-mark-circle"></i> Custom network stack</li>
-                                    <li><i class="lni-check-mark-circle"></i> Prism OS platform</li>
                                 </ul>
                             </div>
                             <div class="pricing-btn text-center">
