--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="services-content media-body">
                                     <h4 class="services-title">Design</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <p class="text">We work with dedicated team of designers to make sure that the UX flow and UI is perfectly optimized</p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -168,7 +168,7 @@
                                 </div>
                                 <div class="services-content media-body">
                                     <h4 class="services-title">Development</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <p class="text">With experienced developers, we deliver maintainable and performant code in timely manner</p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="services-content media-body">
                                     <h4 class="services-title">Project Management</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <p class="text">With a dedicated PM assigned to each project, we will keep the development on track and keep you up to date on the development</p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
@@ -190,7 +190,7 @@
                                 </div>
                                 <div class="services-content media-body">
                                     <h4 class="services-title">Regular check ins and demos</h4>
-                                    <p class="text">Short description for the ones</br> who look for something new.</p>
+                                    <p class="text">We do weekly or biweekly check ins with you to keep you up to date on the progress</p>
                                 </div>
                             </div> <!-- services content -->
                         </div>
