Added mousewheel scroll

--- a/index.html
+++ b/index.html
@@ -552,6 +552,9 @@
     <!--====== Magnific Popup js ======-->
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
 
+    <!--====== Mousewheel js ======-->
+    <script src="assets/js/jquery.mousewheel.min.js"></script>
+
     <!--====== Owl Carousel js ======-->
     <script src="assets/js/owl.carousel.min.js"></script>
 
