Add ing experiment section

--- a/index.html
+++ b/index.html
@@ -380,6 +380,16 @@
                         <a href="https://learnshare.herokuapp.com" class="btn btn-primary" target="_blank">Learn More</a>
                     </div>
                 </div>
+                <!--
+                    <div class="col-md-5 col-sm-12 card shadow p-0" style="margin:10px;">
+                        <img class="card-img-top" style="width:inherit;height:auto;margin-bottom:20px;" src="/assets/images/experiments.png"/>
+                        <div class="card-body">
+                            <h5 class="card-title">Experiments</h5>
+                            <p class="card-text mb-5">Trying out something different</p>
+                            <a href="/experiments" class="btn btn-primary">Let's see</a>
+                        </div>
+                    </div>
+                -->
                 <!-- card
                     <div class="owl-carousel">
                         <div><img style="height:50vh;width:auto;" src="/assets/images/portfolio/prism.png"/></div>
