Add painter to experiment

--- a/experiments/index.html
+++ b/experiments/index.html
@@ -77,17 +77,20 @@
     <section id="experiments" class="experiments-area">
         <div class="container">
             <div class="card-columns">
-                <div class="card" style="margin:10px;border-radius:36px;">
-                    <img class="card-img-top" style="width:inherit;height:auto;border-radius:36px;" src="/assets/images/experiments/wpcards.gif"/>
-                </div>
                 <div class="card" style="margin:10px;border-radius:40px;">
                     <img class="card-img-top" style="width:inherit;height:auto;border-radius:40px;" src="/assets/images/experiments/microanimation.gif"/>
                 </div>
                 <div class="card" style="margin:10px;">
-                    <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/today_rn.gif"/>
+                    <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/painter.gif"/>
+                </div>
+                <div class="card" style="margin:10px;border-radius:36px;">
+                    <img class="card-img-top" style="width:inherit;height:auto;border-radius:36px;" src="/assets/images/experiments/wpcards.gif"/>
                 </div>
             </div>
             <div class="card-columns">
+                <div class="card" style="margin:10px;">
+                    <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/today_rn.gif"/>
+                </div>
                 <div class="card" style="margin:10px;width:640px;max-width:90vw;">
                     <img class="card-img-top" style="width:inherit;height:auto;" src="/assets/images/experiments/mac_quark.gif"/>
                     <p class="card-text">quark-carlo</p>
