Rename to buildizy, Fix layout of portfolio

--- a/404.html
+++ b/404.html
@@ -7,20 +7,20 @@
 	<meta name="Keywords" content="application development, website development, engineering, product, service agency, bengaluru, flutter, react, react native, ruby on rails, nodejs, iot, arduino development">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@buildigy">
-	<meta name="twitter:title" content="Buildigy">
-	<meta name="twitter:description" content="Buildigy, Let's make something">
-	<meta name="twitter:creator" content="@buildigy">
+	<meta name="twitter:site" content="@buildizy">
+	<meta name="twitter:title" content="Buildizy">
+	<meta name="twitter:description" content="Buildizy, Let's make something">
+	<meta name="twitter:creator" content="@buildizy">
 	<!-- <meta name="twitter:image" content="http://sidevesh.com/public/images/screenshot.png"> -->
 	<!-- Open Graph data -->
-	<meta property="og:title" content="Buildigy" />
-	<meta property="og:url" content="https://buildigy.netlify.com/" />
+	<meta property="og:title" content="Buildizy" />
+	<meta property="og:url" content="https://buildizy.netlify.com/" />
     <!-- <meta property="og:image" content="http://sidevesh.com/public/images/screenshot.png" /> -->
-	<meta property="og:site_name" content="Buildigy" />
-	<meta property="og:description" content="Buildigy, Let's make something" /> 
-	<link rel="home" href="https://buildigy.netlify.com/" />
+	<meta property="og:site_name" content="Buildizy" />
+	<meta property="og:description" content="Buildizy, Let's make something" /> 
+	<link rel="home" href="https://buildizy.netlify.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Buildigy | 404</title>
+    <title>Buildizy | 404</title>
     <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/LineIcons.css">
@@ -60,9 +60,9 @@
                             <div class="navbar-social d-none d-sm-flex align-items-center">
                                 <span>FOLLOW US</span>
                                 <ul>
-                                    <li><a href="https://twitter.com/buildigy" target="_blank"><i class="lni-twitter-original"></i></a></li>
-                                    <li><a href="http://instagram.com/buildigy" target="_blank"><i class="lni-instagram-original"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/buildigy" target="_blank"><i class="lni-linkedin-original"></i></a></li>                                  
+                                    <li><a href="https://twitter.com/buildizy" target="_blank"><i class="lni-twitter-original"></i></a></li>
+                                    <li><a href="http://instagram.com/buildizy" target="_blank"><i class="lni-instagram-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/buildizy" target="_blank"><i class="lni-linkedin-original"></i></a></li>                                  
                                 </ul>
                             </div>
                         </nav>
