--- a/404.html
+++ b/404.html
@@ -21,7 +21,15 @@
 	<link rel="home" href="https://buildizy.netlify.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Buildizy | 404</title>
-    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#007bff">
+    <meta name="apple-mobile-web-app-title" content="Buildizy">
+    <meta name="application-name" content="Buildizy">
+    <meta name="msapplication-TileColor" content="#007bff">
+    <meta name="theme-color" content="#007bff">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/LineIcons.css">
     <link rel="stylesheet" href="/assets/css/magnific-popup.css">
@@ -39,7 +47,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="/">
-                                <img src="/assets/images/logo.svg" alt="Logo">
+                                <img src="/assets/images/logos/gradient_logo.svg" style="width:50px;height:50px;" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
