--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 	<link rel="home" href="https://buildizy.netlify.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Buildizy | Let's make something</title>
-    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#007bff">
+    <meta name="apple-mobile-web-app-title" content="Buildizy">
+    <meta name="application-name" content="Buildizy">
+    <meta name="msapplication-TileColor" content="#007bff">
+    <meta name="theme-color" content="#007bff">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/LineIcons.css">
     <link rel="stylesheet" href="/assets/css/magnific-popup.css">
@@ -39,7 +47,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="/">
-                                <img src="/assets/images/logo.svg" alt="Logo">
+                                <img src="/assets/images/logos/gradient_logo.svg" style="width:50px;height:50px;" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -388,14 +396,16 @@
                         <a href="https://learnshare.herokuapp.com" class="btn btn-primary" target="_blank">Learn More</a>
                     </div>
                 </div>
-                <div class="col-md-5 col-sm-12 card shadow p-0" style="margin:10px;background-color:#ffcc80;">
-                    <img class="card-img-top" style="width:inherit;height:auto;margin-bottom:20px;" src="/assets/images/experiments.png"/>
-                    <div class="card-body">
-                        <h5 class="card-title">Experiments</h5>
-                        <p class="card-text mb-5">&nbsp;</p>
-                        <a href="/experiments" class="btn btn-primary">Let's see</a>
+                <!--
+                    <div class="col-md-5 col-sm-12 card shadow p-0" style="margin:10px;background-color:#ffcc80;">
+                        <img class="card-img-top" style="width:inherit;height:auto;margin-bottom:20px;" src="/assets/images/experiments.png"/>
+                        <div class="card-body">
+                            <h5 class="card-title">Experiments</h5>
+                            <p class="card-text mb-5">&nbsp;</p>
+                            <a href="/experiments" class="btn btn-primary">Let's see</a>
+                        </div>
                     </div>
-                </div>
+                -->
                 <!-- card
                     <div class="owl-carousel">
                         <div><img style="height:50vh;width:auto;" src="/assets/images/portfolio/prism.png"/></div>
@@ -476,10 +486,9 @@
                 <div class="col-lg-6">
                     <div class="footer-logo-support d-md-flex align-items-end justify-content-between">
                         <div class="footer-logo d-flex align-items-end">
-                            <a class="mt-30" href="index.html"><img src="/assets/images/logo.svg" alt="Logo"></a>
                             <ul class="social mt-30">
                                 <li><a href="https://twitter.com/buildizy" target="_blank"><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="http://instagram.com/buildizy" target="_blank"><i class="lni-instagram-original"></i></a></li>
+                                <li><a href="https://instagram.com/buildizy" target="_blank"><i class="lni-instagram-original"></i></a></li>
                                 <li><a href="https://www.linkedin.com/company/buildizy" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer logo -->
