--- a/404.html
+++ b/404.html
@@ -11,11 +11,11 @@
 	<meta name="twitter:title" content="Buildizy">
 	<meta name="twitter:description" content="Buildizy, Let's make something">
 	<meta name="twitter:creator" content="@buildizy">
-	<!-- <meta name="twitter:image" content="http://sidevesh.com/public/images/screenshot.png"> -->
+	<!-- <meta name="twitter:image" content="https://sidevesh.com/public/images/screenshot.png"> -->
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Buildizy" />
 	<meta property="og:url" content="https://buildizy.netlify.com/" />
-    <!-- <meta property="og:image" content="http://sidevesh.com/public/images/screenshot.png" /> -->
+    <!-- <meta property="og:image" content="https://sidevesh.com/public/images/screenshot.png" /> -->
 	<meta property="og:site_name" content="Buildizy" />
 	<meta property="og:description" content="Buildizy, Let's make something" /> 
 	<link rel="home" href="https://buildizy.netlify.com/" />
@@ -69,7 +69,7 @@
                                 <span>FOLLOW US</span>
                                 <ul>
                                     <li><a href="https://twitter.com/buildizy" target="_blank"><i class="lni-twitter-original"></i></a></li>
-                                    <li><a href="http://instagram.com/buildizy" target="_blank"><i class="lni-instagram-original"></i></a></li>
+                                    <li><a href="https://instagram.com/buildizy" target="_blank"><i class="lni-instagram-original"></i></a></li>
                                     <li><a href="https://www.linkedin.com/company/buildizy" target="_blank"><i class="lni-linkedin-original"></i></a></li>                                  
                                 </ul>
                             </div>
@@ -109,5 +109,14 @@
     <script src="/assets/js/jquery.mousewheel.min.js"></script>
     <script src="/assets/js/owl.carousel.min.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-101219891-6', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="cc00b832-67f3-4a26-a2e0-e2efef64c17b";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </body>
 </html>
