Fix Back to home casing

--- a/404.html
+++ b/404.html
@@ -87,7 +87,7 @@
             <div class="d-flex flex-column justify-content-center align-items-center" style="height:80vh;">
                 <h1>404</h1>
                 <h3>Page not found</h3>
-                <a class="btn btn-outline-success btn-lg" style="margin-top:24px;" href="/" role="button">Back to Home</a>
+                <a class="btn btn-outline-success btn-lg" style="margin-top:24px;" href="/" role="button">Back to home</a>
             </div>
         </div>
     </section>
