Change form backend from netlify to formbackend.com

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<!-- <meta name="twitter:image" content="https://sidevesh.com/public/images/screenshot.png"> -->
 	<!-- Open Graph data -->
 	<meta property="og:title" content="Buildizy" />
-	<meta property="og:url" content="https://buildizy.netlify.com/" />
+	<meta property="og:url" content="https://buildizy.com/" />
     <!-- <meta property="og:image" content="https://sidevesh.com/public/images/screenshot.png" /> -->
 	<meta property="og:site_name" content="Buildizy" />
 	<meta property="og:description" content="Buildizy, Let's make something" /> 
-	<link rel="home" href="https://buildizy.netlify.com/" />
+	<link rel="home" href="https://buildizy.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Buildizy | Let's make something</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -432,7 +432,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="contact-form">
-                        <form id="contact-form" data-netlify="true" method="post" data-toggle="validator">
+                        <form id="contact-form" accept-charset="UTF-8" action="https://www.formbackend.com/f/41c4270ba34b0fe1" method="post" data-toggle="validator">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="single-form form-group">
